--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
+    "js-search": "^1.4.3",
     "gatsby-plugin-manifest": "^4.1.0",
     "gatsby-plugin-mdx": "^3.1.0",
     "gatsby-plugin-react-helmet": "^5.1.0",
